src/main/webapp/assets/css/rb-page.css
/* ... */
.custom-checkbox.custom-control-sm.indeterminate .custom-control-label::after {
    width: 8px;
    height: 8px;
}

.custom-radio .custom-control-input:checked~.custom-control-label::after {
    font-size: 0 !important;
    width: 11px;
    height: 11px;
    background-color: #4285f4;
    border-radius: 50%;
    margin-top: 6px;
    margin-left: 6px;
}

.custom-radio.custom-control-sm .custom-control-input:checked~.custom-control-label::after {
    width: 8px;
    height: 8px;
    margin-top: 5px;
    margin-left: 5px;
}

/* 1280 */
@media (max-width:1280px) {

    .adv-search .btn-group,
    .adv-search .btn-group .dropdown-menu,
    .input-search,
    .input-search input {
        width: 212px;
    }

    .btn {
        min-width: 88px;
    }
}

